<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start">start</string>
    <string name="expression_viewer_name">SWAN Expression Viewer</string>
    <string name="sensor_viewer_name">SWAN Sensor Viewer</string>
    <string name="swan_app_name">SWAN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_set_name">Set Name</string>
    <string name="action_enable">Enable</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_swanlake">SWAN Lake</string>
    <string name="menu_sort">Sort</string>
    <string name="sort_name">Name</string>
    <string name="sort_eval_per">Time</string>
    <string name="sort_eval_rate">Frequency</string>
    <string name="sort_eval_delay">Delay</string>
    <string name="sort_eval_avg_time">Avg</string>
    <string name="sort_eval_min_time">Min</string>
    <string name="sort_eval_max_time">Max</string>
    <string name="sort_order">Sort Order</string>
    <string name="expression_viewer">Back</string>

</resources>